--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Movie Stalker</string>
+    <string name="app_name" translatable="false">Movie Stalker</string>
+
+
 </resources>
