Implemented a way to change view and set poster data in the fragment from the main activity. Set up a Retrofit network request to get the movie data Added error view to  fragment_top_movies.xml to display a network error is the network call fails Added progress bad to fragment_top_movies.xml to display when the data is being downloaded Added a recycle view place holder in fragment_top_movies.xml to display the data Created a dimen.xml resource file to store dimensions Added a dependency for retrofit-gson-I forgot to do it the last time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name" translatable="false">Movie Stalker</string>
 
 
+    <!--Error Text-->
+    <string name="network_error">O no!A network error has occured!
+        Please check you internet connection and try again.</string>
+
 </resources>
